# prav

./: .gitignore  Cargo.toml  Makefile  README.md
prav-circuit-bench/: Cargo.toml  PRAV_RESULTS.md  README.md  circuit_results.csv  phenomenological_results.csv
prav-circuit-bench/results/: color_code_results.csv  dual_results.csv  phenomenological_results.csv  streaming_results.csv
prav-circuit-bench/scripts/: generate_dems.py  requirements.txt
prav-circuit-bench/src/: color_code_bench.rs  dual_decoder.rs  main.rs  stats.rs  streaming_bench.rs  verification.rs
prav-circuit-bench/src/dem/: mod.rs  parser.rs  types.rs
prav-circuit-bench/src/surface_code/: detector_map.rs  mod.rs  rotated.rs  unrotated.rs
prav-circuit-bench/src/syndrome/: circuit_sampler.rs  mod.rs  phenomenological.rs  splitter.rs
prav-core/: CHANGELOG.md  Cargo.toml  Makefile  README.md
prav-core/.cargo/: config.toml
prav-core/bench-suite/: Cargo.toml  build.rs  memory.x  memory_r5.x
prav-core/bench-suite/src/: benchmark.rs  main.rs  startup.rs
prav-core/benches/: ops_breakdown.rs  ops_counter_a53.rs  ops_counter_native.rs  ops_counter_r5f.rs
prav-core/examples/: growth_bench.rs  stage_bench.rs  tutorial_honeycomb.rs  tutorial_rectangular.rs  tutorial_square.rs  tutorial_triangular.rs
prav-core/src/: arena.rs  arena_kani.rs  lib.rs  qec_engine.rs  testing_grids.rs  testing_grids_3d.rs  topology.rs
prav-core/src/circuit/: dem_types.rs  mod.rs
prav-core/src/color_code/: decoder.rs  grid_3d.rs  mod.rs  observables.rs  restriction.rs  splitter.rs  types.rs
prav-core/src/decoder/: builder.rs  graph.rs  kani_proofs.rs  mod.rs  observables.rs  sparse.rs  state.rs  streaming.rs  tiled.rs  types.rs  union_find.rs
prav-core/src/decoder/growth/: inter_block.rs  kani_proofs.rs  mod.rs  small_grid.rs  stride32.rs  unrolled.rs
prav-core/src/decoder/peeling/: kani_proofs.rs  mod.rs
prav-core/src/intrinsics/: bits.rs  kani_proofs.rs  mod.rs  morton.rs  spread.rs
prav-core/tests/: integration.rs  prop_test.proptest-regressions
prav-core/tests/arena/: allocation.rs  cache_line.rs  memory_layout.rs  mod.rs
prav-core/tests/color_code/: mod.rs  prop_tests.rs  topology_tests.rs
prav-core/tests/common/: mod.rs
prav-core/tests/decoder/: batch_verification.rs  boundary_diagnostics.rs  builder_tests.rs  component_api.rs  edge_compaction.rs  effective_mask.rs  erasure.rs  exhaustive_hot_state.rs  flood_fill.rs  ghost_activation.rs  granular_api.rs  internal.rs  intra_block_dilation.rs  mod.rs  mono_poly_split.rs  monochromatic.rs  optimistic_root.rs  optimization.rs  prefetch_bounds.rs  prop_decoder_core.rs  prop_hot_state.rs  prop_test.rs  repro_issue.rs  scenarios.rs  scheduler_optimization.rs  selective_spill_prop.rs  sparse_active.rs  sparse_tests.rs  sparse_worklist.rs  state_tests.rs  streaming_tests.rs  tiled_tests.rs  trace_optimization.rs  types_tests.rs  union_find_tests.rs  vertical_diffusion_log.rs  vertical_merge.rs  zero_skip.rs
prav-core/tests/decoder/graph/: mod.rs  static_graph.rs
prav-core/tests/decoder/growth/: growth_loop.rs  mod.rs  optimization.rs  optimized_32.rs  small_grid.rs  small_stride.rs  small_stride_swar.rs  stagnation.rs  stride32.rs  swar.rs  unrolling.rs
prav-core/tests/decoder/peeling/: bfs.rs  edge_cases.rs  extra_coverage.rs  mod.rs  peeling_core.rs  prop_peeling.rs  tiled.rs
prav-core/tests/intrinsics/: mod.rs  prop_tests.rs  test.rs
prav-core/tests/testing_grids/: mod.rs  prop_tests.rs
prav-core/tests/topology/: implicit.rs  mod.rs  topology_tests.rs
prav-core/xtask/: Cargo.toml
prav-core/xtask/src/: main.rs
prav-fb-bench/: Cargo.toml  README.md
prav-fb-bench/src/: graph.rs  main.rs  stats.rs  syndrome.rs  verification.rs
prav-py/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
prav-py-bench/: PRAV_RESULTS.md  README.md  benchmark.py  benchmark_3d.py  requirements.txt  syndrome_generator.py  syndrome_generator_3d.py  verification.py
prav-py/python/prav/: __init__.py  _prav.pyi
prav-py/src/: decoder.rs  lib.rs  topology.rs
prav-py/tests/: __init__.py  conftest.py  test_buffer_size.py  test_decoder.py  test_integration.py  test_properties.py  test_topology.py  test_validation.py
