[package]
name = "prav-circuit-bench"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "3D circuit-level benchmarks for prav Union-Find QEC decoder"

[dependencies]
prav-core = { path = "../prav-core" }
clap = { version = "4.4", features = ["derive"] }
rand = { version = "0.9.2" }
rand_xoshiro = "0.7"

[dev-dependencies]
proptest = "1.6.0"
