[package]
name = "prav-core"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance, no_std, zero-heap Union Find decoder for quantum error correction"
keywords = ["quantum", "error-correction", "qec", "decoder", "no_std"]
categories = ["no-std", "science", "algorithms", "embedded"]
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/qubitsok/prav"
homepage = "https://github.com/qubitsok/prav"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
iai-callgrind = "0.16.1"
rand = { version = "0.9.2", default-features = false, features = ["alloc", "std", "std_rng"] }
proptest = "1.6.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
js-sys = "0.3"
getrandom = "0.3.4"

[target.'cfg(target_os = "none")'.dev-dependencies]
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
cortex-m-rt = "0.7"

[[bench]]
name = "ops_breakdown"
harness = false

[[bench]]
name = "ops_counter_native"
harness = false

[[bench]]
name = "ops_counter_a53"
harness = false

[[bench]]
name = "ops_counter_r5f"
harness = false



