[package]
name = "prav-py"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Python bindings for prav-core QEC decoder"
keywords = ["quantum", "error-correction", "qec", "decoder", "python"]
repository = "https://github.com/qubitsok/prav"

[lib]
name = "prav"
crate-type = ["cdylib"]

[dependencies]
prav-core = { path = "../prav-core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
