[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "prav"
version = "0.1.0"
description = "High-performance Union Find decoder for quantum error correction"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["quantum", "error-correction", "qec", "decoder", "surface-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/qubitsok/prav"
Documentation = "https://github.com/qubitsok/prav"
Repository = "https://github.com/qubitsok/prav"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "prav._prav"
