[package]
name = "bench-suite"
version = "0.1.0"
edition = "2021"

[dependencies]
prav-core = { path = ".." }
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.0", default-features = false }

[target.'cfg(not(target_os = "none"))'.dependencies]
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# --- Cortex-M (Simulation on MPS2-AN500) ---
[target.thumbv7em-none-eabihf.dependencies]
cortex-m = { version = "0.7" }
critical-section = "1.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
cortex-m-rt = "0.7"
embedded-alloc = "0.5"

# --- Cortex-R (Native ZynqMP R5F) ---
[target.armv7r-none-eabi.dependencies]
cortex-r-rt = "0.2.1"
embedded-alloc = "0.5"
panic-halt = "1.0.0"
critical-section = "1.1"
